{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 36,
  "lineage": "f5ba608d-ec3c-8c17-12c4-31560767eb12",
  "resources": [
    {
      "module": "module.ALP",
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-alp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:loadbalancer/app/Public-ALP/34ebc5cd75364fa1",
            "arn_suffix": "app/Public-ALP/34ebc5cd75364fa1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Public-ALP-406032650.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:loadbalancer/app/Public-ALP/34ebc5cd75364fa1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Public-ALP",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cf037215f11b3c41"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0378daef0f377f3b1"
              },
              {
                "subnet_id": "subnet-0592b8da2c6a433ae"
              }
            ],
            "subnets": [
              "subnet-0378daef0f377f3b1",
              "subnet-0592b8da2c6a433ae"
            ],
            "vpc_id": "vpc-058707252a6aa8466",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ALP.aws_security_group.ALP_sg",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ALP",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ALP_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:listener/app/Public-ALP/34ebc5cd75364fa1/c2d90e061dde62a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/ALP-TargetGroup/93b5e7218d944d1c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:listener/app/Public-ALP/34ebc5cd75364fa1/c2d90e061dde62a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:loadbalancer/app/Public-ALP/34ebc5cd75364fa1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALP.aws_lb.terraform-alp",
            "module.ALP.aws_lb_target_group.tg",
            "module.ALP.aws_security_group.ALP_sg",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ALP",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/ALP-TargetGroup/93b5e7218d944d1c",
            "arn_suffix": "targetgroup/ALP-TargetGroup/93b5e7218d944d1c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/ALP-TargetGroup/93b5e7218d944d1c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALP-TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ALP",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/ALP-TargetGroup/93b5e7218d944d1c-20230127184409656400000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/ALP-TargetGroup/93b5e7218d944d1c",
            "target_id": "i-0e6259e646bc9758f"
          },
          "dependencies": [
            "module.ALP.aws_lb_target_group.tg",
            "module.NLP.aws_lb.terraform-nlp",
            "module.ec2.aws_instance.terraform-public-instance",
            "module.ec2.aws_key_pair.terraform_key",
            "module.ec2.aws_security_group.sec-group-terraform",
            "module.ec2.tls_private_key.example",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/ALP-TargetGroup/93b5e7218d944d1c-20230127184409427700000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/ALP-TargetGroup/93b5e7218d944d1c",
            "target_id": "i-072f2430cd697c88b"
          },
          "dependencies": [
            "module.ALP.aws_lb_target_group.tg",
            "module.NLP.aws_lb.terraform-nlp",
            "module.ec2.aws_instance.terraform-public-instance",
            "module.ec2.aws_key_pair.terraform_key",
            "module.ec2.aws_security_group.sec-group-terraform",
            "module.ec2.tls_private_key.example",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ALP",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALP_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:security-group/sg-0cf037215f11b3c41",
            "description": "Application load balancer for public ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf037215f11b3c41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Application-loadBalancer-1",
            "name_prefix": "",
            "owner_id": "311355929583",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.NLP",
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-nlp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:loadbalancer/net/Private-NLP/d4f08ed652970398",
            "arn_suffix": "net/Private-NLP/d4f08ed652970398",
            "dns_name": "Private-NLP-d4f08ed652970398.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:loadbalancer/net/Private-NLP/d4f08ed652970398",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Private-NLP",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-011468ef925b511b9"
              },
              {
                "subnet_id": "subnet-0d78f5ab31384660c"
              }
            ],
            "subnets": [
              "subnet-011468ef925b511b9",
              "subnet-0d78f5ab31384660c"
            ],
            "vpc_id": "vpc-058707252a6aa8466",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.NLP",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "NLP_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:listener/net/Private-NLP/d4f08ed652970398/ee049cfd893f858c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/NLP-TargetGroup/ae3af3948a658575",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:listener/net/Private-NLP/d4f08ed652970398/ee049cfd893f858c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:loadbalancer/net/Private-NLP/d4f08ed652970398",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NLP.aws_lb.terraform-nlp",
            "module.NLP.aws_lb_target_group.tg",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.NLP",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/NLP-TargetGroup/ae3af3948a658575",
            "arn_suffix": "targetgroup/NLP-TargetGroup/ae3af3948a658575",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/NLP-TargetGroup/ae3af3948a658575",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "NLP-TargetGroup",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.NLP",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/NLP-TargetGroup/ae3af3948a658575-20230127184054014500000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/NLP-TargetGroup/ae3af3948a658575",
            "target_id": "i-0fccfed2b8a60575a"
          },
          "dependencies": [
            "module.NLP.aws_lb_target_group.tg",
            "module.ec2.aws_instance.terraform-private-instance",
            "module.ec2.aws_security_group.sec-group-terraform",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/NLP-TargetGroup/ae3af3948a658575-20230127184053963000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:311355929583:targetgroup/NLP-TargetGroup/ae3af3948a658575",
            "target_id": "i-07a2a74cf732a2a1c"
          },
          "dependencies": [
            "module.NLP.aws_lb_target_group.tg",
            "module.ec2.aws_instance.terraform-private-instance",
            "module.ec2.aws_security_group.sec-group-terraform",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-private-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:311355929583:instance/i-0fccfed2b8a60575a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fccfed2b8a60575a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bace52a159d0d701",
            "private_dns": "ip-10-0-1-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-044c8dce5a941c924",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011468ef925b511b9",
            "tags": {
              "Name": "terraform-private-instance - 0",
              "count": "2"
            },
            "tags_all": {
              "Name": "terraform-private-instance - 0",
              "count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b3b4716a775ce11"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sec-group-terraform",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:311355929583:instance/i-07a2a74cf732a2a1c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a2a74cf732a2a1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00785accbfc8b340e",
            "private_dns": "ip-10-0-3-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0335c377c8f75d7c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d78f5ab31384660c",
            "tags": {
              "Name": "terraform-private-instance - 1",
              "count": "2"
            },
            "tags_all": {
              "Name": "terraform-private-instance - 1",
              "count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b3b4716a775ce11"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sec-group-terraform",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-public-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:311355929583:instance/i-0e6259e646bc9758f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6259e646bc9758f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079d7432dc4b786f9",
            "private_dns": "ip-10-0-0-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.35",
            "public_ip": "3.89.24.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1b0e12124c1c624",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0378daef0f377f3b1",
            "tags": {
              "Name": "terraform-public-instance - 0",
              "count": "2"
            },
            "tags_all": {
              "Name": "terraform-public-instance - 0",
              "count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b3b4716a775ce11"
            ]
          },
          "dependencies": [
            "module.NLP.aws_lb.terraform-nlp",
            "module.ec2.aws_key_pair.terraform_key",
            "module.ec2.aws_security_group.sec-group-terraform",
            "module.ec2.tls_private_key.example",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:311355929583:instance/i-072f2430cd697c88b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072f2430cd697c88b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06126b27f9e6e38c9",
            "private_dns": "ip-10-0-2-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.123",
            "public_ip": "204.236.241.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca4009e0f2179b0f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0592b8da2c6a433ae",
            "tags": {
              "Name": "terraform-public-instance - 1",
              "count": "2"
            },
            "tags_all": {
              "Name": "terraform-public-instance - 1",
              "count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b3b4716a775ce11"
            ]
          },
          "dependencies": [
            "module.NLP.aws_lb.terraform-nlp",
            "module.ec2.aws_key_pair.terraform_key",
            "module.ec2.aws_security_group.sec-group-terraform",
            "module.ec2.tls_private_key.example",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:security-group/sg-03b3b4716a775ce11",
            "description": "Security group for allowing http ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b3b4716a775ce11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-secgroup",
            "name_prefix": "",
            "owner_id": "311355929583",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.natGatway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065c780a8108dd939",
            "domain": "vpc",
            "id": "eipalloc-065c780a8108dd939",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-174-129-78-216.compute-1.amazonaws.com",
            "public_ip": "174.129.78.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natGatway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGatway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065c780a8108dd939",
            "connectivity_type": "public",
            "id": "nat-08174498c7748b911",
            "network_interface_id": "eni-03490f06b4b9d91ab",
            "private_ip": "10.0.0.169",
            "public_ip": "174.129.78.216",
            "subnet_id": "subnet-0378daef0f377f3b1",
            "tags": {
              "Name": "Terraform NAT"
            },
            "tags_all": {
              "Name": "Terraform NAT"
            }
          },
          "dependencies": [
            "module.natGatway.aws_eip.elastic-ip",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.routTables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-natgatway-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:route-table/rtb-01a9e0452131981fe",
            "id": "rtb-01a9e0452131981fe",
            "owner_id": "311355929583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08174498c7748b911",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-routetable"
            },
            "tags_all": {
              "Name": "terraform-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natGatway.aws_eip.elastic-ip",
            "module.natGatway.aws_nat_gateway.natGatway",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.routTables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:route-table/rtb-0752ee35c0d883688",
            "id": "rtb-0752ee35c0d883688",
            "owner_id": "311355929583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db4ca393ca1e7fac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "internetgatway-routetable"
            },
            "tags_all": {
              "Name": "internetgatway-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-terraform.aws_internet_gateway.internetgatway",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.routTables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natgatway-private1-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d3c296189ba7195",
            "route_table_id": "rtb-01a9e0452131981fe",
            "subnet_id": "subnet-011468ef925b511b9"
          },
          "dependencies": [
            "module.natGatway.aws_eip.elastic-ip",
            "module.natGatway.aws_nat_gateway.natGatway",
            "module.routTables.aws_route_table.terraform-natgatway-route-table",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.routTables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natgatway-private2-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07168928d4c451ae2",
            "route_table_id": "rtb-01a9e0452131981fe",
            "subnet_id": "subnet-0d78f5ab31384660c"
          },
          "dependencies": [
            "module.natGatway.aws_eip.elastic-ip",
            "module.natGatway.aws_nat_gateway.natGatway",
            "module.routTables.aws_route_table.terraform-natgatway-route-table",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.routTables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f108f32446350de",
            "route_table_id": "rtb-0752ee35c0d883688",
            "subnet_id": "subnet-0378daef0f377f3b1"
          },
          "dependencies": [
            "module.routTables.aws_route_table.terraform-route-table",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_internet_gateway.internetgatway",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.routTables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0768e915bb02b82f0",
            "route_table_id": "rtb-0752ee35c0d883688",
            "subnet_id": "subnet-0592b8da2c6a433ae"
          },
          "dependencies": [
            "module.routTables.aws_route_table.terraform-route-table",
            "module.subnet.aws_subnet.subnets",
            "module.vpc-terraform.aws_internet_gateway.internetgatway",
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:subnet/subnet-0378daef0f377f3b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0378daef0f377f3b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311355929583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet 1",
              "count": "4"
            },
            "tags_all": {
              "Name": "public subnet 1",
              "count": "4"
            },
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:subnet/subnet-0592b8da2c6a433ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0592b8da2c6a433ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311355929583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet 2 ",
              "count": "4"
            },
            "tags_all": {
              "Name": "public subnet 2 ",
              "count": "4"
            },
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:subnet/subnet-011468ef925b511b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011468ef925b511b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311355929583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet 1",
              "count": "4"
            },
            "tags_all": {
              "Name": "private subnet 1",
              "count": "4"
            },
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:subnet/subnet-0d78f5ab31384660c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d78f5ab31384660c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311355929583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet 2",
              "count": "4"
            },
            "tags_all": {
              "Name": "private subnet 2",
              "count": "4"
            },
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-terraform",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgatway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:internet-gateway/igw-0db4ca393ca1e7fac",
            "id": "igw-0db4ca393ca1e7fac",
            "owner_id": "311355929583",
            "tags": {
              "Name": "Terraform internetgateway"
            },
            "tags_all": {
              "Name": "Terraform internetgateway"
            },
            "vpc_id": "vpc-058707252a6aa8466"
          },
          "dependencies": [
            "module.vpc-terraform.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-terraform",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:vpc/vpc-058707252a6aa8466",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b03f1d19795f0c89",
            "default_route_table_id": "rtb-04d156dea70127422",
            "default_security_group_id": "sg-0712446c54eaca160",
            "dhcp_options_id": "dopt-0c52d406c6c001c38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058707252a6aa8466",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d156dea70127422",
            "owner_id": "311355929583",
            "tags": {
              "Name": "Terraform"
            },
            "tags_all": {
              "Name": "Terraform"
            }
          }
        }
      ]
    }
  ]
}